# coin_conversion_project

./: .gitignore  README.md  coinbase.db  coinbase.sqlite  pyproject.toml
src/: auxiliares.py  creating_fato.py  crud.py  database.py  importing_data.py  main.py  models.py  schema.py
src_fato/: creating_fato.py  models_fato.py
