[tool.poetry]
name = "coin-conversion-project"
version = "0.1.0"
description = ""
authors = ["gustavo <gust.weing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
sqlalchemy = "^2.0.37"
pandas = "^2.2.3"
pydantic = "^2.10.5"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
